testsuite/tests/grammar/invalid_synthetic_parser/test.out
== list.lkt ==
list.lkt:6:47: error: Parsers cannot create synthetic nodes
6 |     @main_rule main_rule <- Example("example" ListSynthExample+("example"))
  |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== null.lkt ==
null.lkt:6:47: error: Parsers cannot create synthetic nodes
6 |     @main_rule main_rule <- Example("example" null(SynthExample))
  |                                               ^^^^^^^^^^^^^^^^^^


== skip.lkt ==
skip.lkt:6:52: error: no entity called 'SynthExapmle' in scope for unit skip.lkt
6 |     @main_rule main_rule <- Example("example" skip(SynthExapmle))
  |                                                    ^^^^^^^^^^^^


== transform.lkt ==
transform.lkt:6:47: error: Parsers cannot create synthetic nodes
6 |     @main_rule main_rule <- Example("example" SynthExample())
  |                                               ^^^^^^^^^^^^^^


lkt_compile: Done
